# wave-function-collapse

./: .gitmodules  Cargo.toml  LICENCE  README.md
crates/wave_algo/: Cargo.toml
crates/wave_framework/: Cargo.toml
crates/wave_framework/src/: lib.rs  loader.rs  option.rs
src/: main.rs
